namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: website-bolt
spec: {}
status: {}
