deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: website-bolt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: docker.io/library/mariadb@sha256:6aede9b2573833b2271f413ae12268796499fdaa5073681f9902f5ab2c60b84a
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        - --log-bin=mysqld-bin
        - --skip-innodb-read-only-compressed
        securityContext:
          privileged: true
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db
      restartPolicy: Always
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: db
