deployment-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nc
  name: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nc
  template:
    metadata:
      labels:
        app: nc
    spec:
      restartPolicy: Always
      containers:
      - name: nc
        image: docker.io/library/nextcloud@sha256:9c2e3eda26a7874264ee11427e12189606b89e3cf2b59d5b9f9c8038355e0078
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
          hostPort: 8099
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html:Z
          name: html
        - mountPath: /var/www/html/data:Z
          name: data
      - name: db
        image: docker.io/library/mariadb@sha256:6aede9b2573833b2271f413ae12268796499fdaa5073681f9902f5ab2c60b84a
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        securityContext:
          privileged: true
        args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        - --log-bin=mysqld-bin
        - --skip-innodb-read-only-compressed
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql:Z
          name: db
      volumes:
      - name: data
        hostpath:
          path: /data/nextcloud/data
          type: Directory
      - name: html
        hostpath:
          path: /nextcloud/html
          type: Directory
      - name: db
        hostpath:
          path: /data/nextcloud/db
          type: Directory
