deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
  namespace: website-bolt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: cnt
        # push to git@github.com:kpouget/boltcms-ubi.git
        # https://quay.io/repository/kpouget/boltcms-ubi?tab=tags
        image: quay.io/kpouget/boltcms-ubi@sha256:82e2600d46a41059d42b8472e3d9a176bd9909474cb14218a7c1b8f84e838e0f
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - mountPath: /opt/app-root/src/app-src/config
          name: config
        - mountPath: /opt/app-root/src/app-src/public/theme/theme-gsq-solid-state
          name: theme
        - mountPath: /opt/app-root/src/app-src/public/files
          name: files
        - mountPath: /opt/app-root/src/app-src/public/thumbs
          name: thumbs
        - mountPath: /opt/app-root/src/app-src/var
          name: var
      #
      # Database container
      #

      - name: db
        image: docker.io/library/mariadb@sha256:6aede9b2573833b2271f413ae12268796499fdaa5073681f9902f5ab2c60b84a
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "256Mi"
        args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        - --log-bin=mysqld-bin
        - --skip-innodb-read-only-compressed
        securityContext:
          privileged: true
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db
      restartPolicy: Always
      volumes:
      - name: config
        hostPath:
          path: "/data/website/bolt/config"
          type: DirectoryOrCreate
      - name: theme
        hostPath:
          path: "/data/website/bolt/theme"
          type: DirectoryOrCreate
      - name: files
        hostPath:
          path: "/data/website/bolt/files"
          type: DirectoryOrCreate
      - name: thumbs
        hostPath:
          path: "/data/website/bolt/thumbs"
          type: DirectoryOrCreate
      - name: var
        hostPath:
          path: "/data/website/bolt/var"
          type: DirectoryOrCreate
      - name: db
        hostPath:
          path: "/data/website/db"
          type: DirectoryOrCreate
