service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: nextcloud
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: db
